# ncnn-andriod-scrfd-app

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  dnn_jni.cpp  dnn_scr.cpp  dnn_scr.hpp  retinaface_jni.cpp  scrfd.cpp  scrfd.hpp  scrfd_jni.cpp
app/src/main/java/com/example/retainfacencnn/: MainActivity.java  SCRFD.java  SCRFDDNN.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
